[package]
name = "Crypt1"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
fltk = "1.5.9"
rfd = "0.15.3"
sha2 = "0.10.9"
time = {version = "0.3.41", features = ["local-offset"]}



[profile.release]
lto = true
opt-level = 3
strip = true
debug = false
panic = "abort"
codegen-units = 1
